feat: SSE, WebSockets, fetch, SessionManager, route handling and more